--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -29,6 +29,7 @@
 		animation: title-flow 2.5s linear infinite;
 	}
 
+
 	@keyframes title-flow {
 		0% {
 			background-position: 0%;
@@ -283,6 +284,21 @@
 
 	h4 {
 		font-size: 1em;
+		font-family: "思源黑体 CN";
+		font-weight: 700;
+		letter-spacing: 0.15em;
+		background-image:
+				linear-gradient(90deg,
+				#f0a1a8 0%,
+				#f09c5a 25%,
+				#83cbac 50%,
+				#f09c5a 75%,
+				#f0a1a8 100%);
+		background-clip: text;
+		-webkit-background-clip: text;
+		-webkit-text-fill-color: transparent;
+		background-size: 200%;
+		animation: title-flow 2.5s linear infinite;
 	}
 
 	h5 {
